--- a/src/app/modules/admin/components/m2m-clients/m2m-client-create.component.html
+++ b/src/app/modules/admin/components/m2m-clients/m2m-client-create.component.html
@@ -149,7 +149,10 @@
               type="button"
               (click)="copySecret()"
             >
-              <i class="bi" [ngClass]="secretCopied ? 'bi-check' : 'bi-copy'"></i>
+              <i
+                class="bi"
+                [ngClass]="secretCopied ? 'bi-check' : 'bi-copy'"
+              ></i>
               {{ secretCopied ? "Copied!" : "Copy" }}
             </button>
           </div>
